--- a/resources/css/media.css
+++ b/resources/css/media.css
@@ -1,15 +1,76 @@
+/* // X-Large devices (large desktops, 1200px and up) */
+
+
+@media screen and (max-width: 1270px){
+    .head-section {display: none;}
+    .section-1 {height: 40vw;}
+    #head-adds {
+        height: 30vw;
+    }
+    .each-blog {
+        width: 85.4vw !important;
+        margin-bottom: 6vw;
+        text-align: center; 
+    }
+    .blog-img {
+        width: 100% !important;
+        height: 100% !important;
+    }
+    #s1, #s2, #s4 {font-size: 2.4vw;}
+    #s3 {font-size: 4vw;}
+    #s5 {font-size:2vw}
+ }
+
+/* // Large devices (desktops, 992px and up) */
+@media (max-width: 992px) {
+
+     .three-img {
+        width: 100%;
+        height: 100%;
+    }
+    
+     .blog-img {
+        width: 100%;
+        height: 100%;
+    }
+    .heading-side {font-size: 5.61vw;}
+    .h2-b div {font-size: 2.05vw;}
+    #category {font-size: 1.7vw;}
+    #item-name {font-size: 1.2vw;}
+    #price-after {font-size: 2vw;}
+    #price-before {font-size: 2vw;}
+    .btn-blue {font-size: 1.5vw;} 
+
+ }
+
+/* // Medium devices (tablets, 768px and up) */
+@media (max-width: 768px) {
+    .three-img {
+       width: 100%;
+       height: 100%;
+   }
+   .blog-img {
+       width: 100% !important;
+       height: 50vw !important;
+   }
+   .each-blog {
+       width: 85.4vw !important;
+       margin-bottom: 6vw;
+       text-align: center; 
+   }
+   #s1, #s2, #s4 {font-size: 3.4vw;}
+    #s3 {font-size: 5vw;}
+    #s5 {font-size:3vw}
+
+}
+
 /* // X-Small devices (portrait phones, less than 576px) */
 /* // Small devices (landscape phones, 576px and up) */
-@media (max-width: 576px) { 
 
-        /* fair */
-    .head-section {display: none;}
-    .yello-star{width: 3vw;}
-    .larg-icon {width: 4vw;}
-    .footer-icon {width: 2vw;}
-    .footer-left-icon {width: 2vw;}
+ @media (max-width: 576px) { 
+     .footer {display: none;}
+    .yello-star{width: 4vw;}
     .send-icon {width: 3vw;}
-    .header-icon {width: 3vw;}
     .cart-icon {width: 2vw;}
     .section-1 {height: 24vh;}
     .l-ic {border-radius: 0 6px 5px 0;}
@@ -21,14 +82,15 @@
         width: 85.45vw;
     }
     .b-order {
-        height: 5vw;
-        font-size: 1.6vw;
+        height: 4vw;
+        font-size: 1.3vw;
     }
+    .input-boxx {padding-bottom: 15vw;}
+    #subscription {padding-bottom: 7vw;}
     .heading-side {font-size: 6vw;}
     .section-3 {
         margin-top: 0;
     }
-    br {display: none;}
     .h2-b div {font-size: 2.2vw;}
     .btn-blue {height: 3vw;}
     .items {
@@ -57,10 +119,11 @@
         font-size: 2vw;
     }
     #input-1 {
-        width: 36.8vw;
-        height: 4.4vh;
+        width: 24.8vw;
+        height: 3.4vw;
+        font-size: 2vw;
     }
-    .icon-bg {height: 4.4vh;}
+    .icon-bg {height: 3.2vw;}
     .sony-logo {
         height: 1.5vh;
         width: 8vw;
@@ -77,7 +140,6 @@
     #s3 {font-size: 5vw;}
     #s5 {font-size:3vw}
     #sub-1 {font-size: 1.89vw;}
-    .footer {display: none;}
     .copyright {font-size: 1.84vw;}
     .products {
         height: 90%!important;
@@ -97,19 +159,12 @@
         max-height: 21.7vh;
     }
     .arow {width: 2vw;}
-}
-
-/* // Medium devices (tablets, 768px and up) */
-@media (max-width: 768px) {
+} 
 
 
- }
 
-/* // Large devices (desktops, 992px and up) */
-@media (max-width: 992px) { }
 
-/* // X-Large devices (large desktops, 1200px and up) */
-@media (max-width: 1200px) { }
 
-/* // XX-Large devices (larger desktops, 1400px and up) */
-@media (max-width: 1400px) { }
+
+
+
