--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,11 +45,12 @@ section {
 }
 /* Header section */
 header {
-    margin-top: 1vh;
+    padding-top: 1vh;
     font-family: SFProDisplay-Regular;
     color: #000000;
     background-color: #FFFFFF;
 }
+.header-icon {width: 3vw;}
 /*------------------  */
 /* ---reUsalble code ------- */
 /* -------------------- */
@@ -113,15 +114,17 @@ header {
 
 
 /* Secton-1 */
-.section-1{
+.hero-banner{
     margin-top: 1vh;
+    margin-bottom: 4vw;
     padding-left: 11vw;
     width: 100%;
-    height: 62vh;
+    height: 30vw;
     background-image: url("/resources/img/Group\ 51223.png");
     background-size: 100% 100%;
     overflow-x: hidden;
 }
+.hero-text {padding: 4vw 0;}
 .left-arro-icon {
     left: -1.7vw;
 }
@@ -142,7 +145,7 @@ header {
 .l-ic,
 .r-ic {
     width: 2.5vw;
-    height: 11.6vh;
+    height: 6vw;
     top: 40%;
 }
 .l-ic {
@@ -160,17 +163,19 @@ header {
 .b-order {
     font-size: 1.15vw;
     width: 12.2vw;
-    height: 6.4vh;
+    height: 3vw;
     border-radius: 32px 32px 32px 32px;
     background-color: #000000;
     color: #FFFFFF;
-    font-family:SFProDisplay-Semibold ;
+    text-transform: uppercase;
+    font-family: SFProDisplay-Semibold;
+    letter-spacing: 0.3vw;
 }
 .view-all-btn {
     background-color: #000000;
     color: #FFFFFF;
     width: 6.15vw;
-    height: 4.4vh;
+    height: 2vw;
     font-size: 0.94vw;
     border-radius: 32px 32px 32px 32px;
     font-family:SFProDisplay-Medium ;
@@ -197,13 +202,10 @@ header {
 
 /* section 2 three img */
 
-.section-2 {
-    margin-top:4vw;
-}
 
 .three-img {
     width: 27vw;
-    height: 30vh;
+    height: 18vw;
 }
 
 /* .all-3 div {
@@ -241,12 +243,13 @@ header {
 .btn-blue {
     background-color: #146CDA;
     width: 11vw;
-    height: 4.4vh;
+    height: 2vw;
     border-radius: 22px 22px 22px 22px;
     color: #FFFFFF;
     font-family:SFProDisplay-Medium ;
     font-size: 0.89vw;;
 }
+
 
 .cart-icon {width: 1.2vw;}
 
@@ -255,7 +258,7 @@ header {
 .off-10 {
     color: #146CDA;
     background-color: #E1FFF1;
-    height: 3.6vh;
+    height: 2vw;
     width: 4vw;
     border-radius: 17px 17px 17px 17px;
     top: 1vw;
@@ -292,6 +295,7 @@ header {
     height: auto;
     max-height: 21.7vh;
 }
+.yello-star{width: 1.2vw;}
 .items {
     height: 100%;
     background-color: #FFFFFF;
@@ -305,7 +309,7 @@ header {
 #head-adds{
     margin-top: 1vh;
     width: 85.45vw;
-    height: 55vh;
+    height: 28vw;
     border-radius: 7px;
 }
 .img-content {
@@ -333,7 +337,7 @@ header {
 }
 .adds div {
     margin-top: -1vw;
-}
+} 
 /* ------------------ */
  /* Section Best Sellers */
 /* ------------------ */
@@ -342,7 +346,7 @@ header {
     font-weight: bold;
 }
 
-.heading-part {margin: 3vw 5vw 3vh 3vw;}
+.heading-part {margin: 3vw 0;}
 
 
 /* ------------------ */
@@ -370,28 +374,28 @@ header {
     filter: grayscale(100%);
 }
 .sony-logo {
-    height: 3.5vh;
+    height: 2.5vw;;
     width: 8vw;
 }
 .samsung-logo {
     width: 10vw;
-    height: 3vh;
+    height: 1.5vw;
 }
 .dell-logo {
     width: 7.2vw;
-    height: 4.2vh;
+    height: 2.5vw;
 }
 .nikon-logo {
     width: 8.3vw;
-    height: 6.2vh;
+    height: 3.5vw;
 }
 .philips-logo {
     width: 10.3vw;
-    height: 3.9vh;
+    height: 2vw;
 }
 .lenvo-logo {
     width: 10.7vw;
-    height: 4.3vh;
+    height: 2.1vw;
 }
 /* Section Blogs */
 .blogs {
@@ -455,9 +459,9 @@ margin: 0 auto; */
     background-color: #146CDA;
     width: 100%;
     max-width: 1920px;
-    height: 18vh;
+    height: 10vw;
     color: #FFFFFF;
-    margin-top: 2vw;
+    padding: 1vw;
 }
 .subscribe-1 {padding-top: 1vw;}
 #subscription {margin-right: 15vw;}
@@ -472,8 +476,8 @@ margin: 0 auto; */
 
 #input-1 {
     width: 23.8vw;
-    height: 6.4vh;
-    color: #BBBBBB;
+    height: 3vw;
+    color: #b3a2a2;
     font-family:SFProDisplay-Light;
     padding:1vw;
 }
@@ -481,7 +485,7 @@ margin: 0 auto; */
 .icon-bg {
     background-color: #000000;
     width: 4.12vw;
-    height: 6.4vh;
+    height: 3vw;
     font-size: 1.2vw;
 }
 
@@ -501,8 +505,8 @@ margin: 0 auto; */
 
 .larg-icon {width: 3vw;}
 .bus {
-    height: 2.5vw;
-    width: 4vw;
+    height: 4.5vw;
+    width: 5vw;
 }
 /* ---------Usable component ------------- */
 .move span:last-child,
@@ -516,8 +520,11 @@ margin: 0 auto; */
 /* footer */
 footer {
     background-color: #FFFFFF;
-    padding-top: 2vw;
+    padding-top: 1.5vw;
 }
+.larg-icon {width: 4vw;}
+.footer-icon {width: 1vw;}
+.footer-left-icon {width: 1.5vw;}
 .footer {
     width: 85.45vw;
     margin: 0 auto;
